// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create a topic 1`] = `
Object {
  "app.wsim/simulator.json": Object {
    "resources": Array [
      Object {
        "attrs": Object {},
        "path": "root/WingLogger",
        "props": Object {},
        "type": "wingsdk.cloud.Logger",
      },
      Object {
        "attrs": Object {},
        "path": "root/my_topic",
        "props": Object {
          "subscribers": Array [],
        },
        "type": "wingsdk.cloud.Topic",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "app.wsim/tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_topic": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": Object {
            "description": "A pub/sub notification topic",
            "title": "Topic",
          },
          "id": "my_topic",
          "path": "root/my_topic",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
  "tree.json": Object {
    "tree": Object {
      "children": Object {
        "WingLogger": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": Object {
            "description": "A cloud logging facility",
            "hidden": true,
            "title": "Logger",
          },
          "id": "WingLogger",
          "path": "root/WingLogger",
        },
        "my_topic": Object {
          "attributes": Object {
            "wing:resource:connections": Array [],
            "wing:resource:stateful": true,
          },
          "constructInfo": Object {
            "fqn": "constructs.Construct",
            "version": "10.1.245",
          },
          "display": Object {
            "description": "A pub/sub notification topic",
            "title": "Topic",
          },
          "id": "my_topic",
          "path": "root/my_topic",
        },
      },
      "constructInfo": Object {
        "fqn": "constructs.Construct",
        "version": "10.1.245",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`topic publishes messages as they are received 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Received Alpha",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "Publish (message=Beta).",
  "Sending message (message=Beta, subscriber=sim-1).",
  "Received Beta",
  "Invoke (payload=\\"\\"Beta\\"\\").",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;

exports[`topic publishes messages to multiple subscribers 1`] = `
Array [
  "wingsdk.cloud.Logger created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Function created.",
  "wingsdk.cloud.Topic created.",
  "Publish (message=Alpha).",
  "Sending message (message=Alpha, subscriber=sim-1).",
  "Received Alpha",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "Sending message (message=Alpha, subscriber=sim-2).",
  "Also received Alpha",
  "Invoke (payload=\\"\\"Alpha\\"\\").",
  "wingsdk.cloud.Topic deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Function deleted.",
  "wingsdk.cloud.Logger deleted.",
]
`;
